--- a/WIU/package.json
+++ b/WIU/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^19.0.1",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/stack": "^6.3.25",
     "expo": "^50.0.13",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.9.0",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-gesture-handler": "~2.14.0",
